nova versão meu primeiro site

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h3>PORTFÓLIO</h3>
         <article>
             <p>
-                Esse é o primeiro site que desenvolvi, estudando Front-End
+                Esse é o primeiro site que desenvolvi, estudando Front-End e agora adicionei mais um texto!
             </p>
         </article>
     </aside>
